<?xml version="1.0"?>
<package format="2">
  <name>uwb_ros</name>
  <version>0.0.0</version>
  <description>The uwb_ros package</description>

  <maintainer email="mohammed.shalaby@mail.mcgill.ca">Mohammed Shalaby</maintainer>

  <license>TODO</license>


  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>